--- a/Frontend/students-serch/student.html
+++ b/Frontend/students-serch/student.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -19,8 +21,8 @@
                 <a href="#" class="nav-link">My Bookings</a>
             </nav>
             <div class="user-info">
-                
-                <a href="#" class="logout-link">
+
+                <a href="#" id="logoutBtn" class="logout-link">
                     Logout <i class="fas fa-arrow-right"></i>
                 </a>
             </div>
@@ -28,13 +30,13 @@
     </header>
 
     <!-- Search Bar -->
-   
+
 
     <!-- Main Content -->
     <main class="main-content">
         <div class="content-header">
             <h2 class="section-title">Available Rooms</h2>
-           
+
         </div>
 
         <!-- Room Cards -->
@@ -42,13 +44,14 @@
             <!-- Room Card 1 -->
             <div class="room-card">
                 <div class="room-image">
-                    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?w=400&h=250&fit=crop" alt="Cozy Studio Near Campus">
+                    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?w=400&h=250&fit=crop"
+                        alt="Cozy Studio Near Campus">
                 </div>
                 <div class="room-info">
                     <h3 class="room-title">Laureles</h3>
                     <p class="room-location">
                         <i class="fas fa-map-marker-alt"></i>
-                         1km Cerca de la Universidad Pontificia Bolivariana
+                        1km Cerca de la Universidad Pontificia Bolivariana
                     </p>
                     <div class="room-details">
                         <div class="price">$450/mo</div>
@@ -64,7 +67,8 @@
             <!-- Room Card 2 -->
             <div class="room-card">
                 <div class="room-image">
-                    <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=400&h=250&fit=crop" alt="Shared Apartment">
+                    <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=400&h=250&fit=crop"
+                        alt="Shared Apartment">
                 </div>
                 <div class="room-info">
                     <h3 class="room-title">Aranjuez</h3>
@@ -86,7 +90,8 @@
             <!-- Room Card 3 -->
             <div class="room-card">
                 <div class="room-image">
-                    <img src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?w=400&h=250&fit=crop" alt="Private Studio">
+                    <img src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?w=400&h=250&fit=crop"
+                        alt="Private Studio">
                 </div>
                 <div class="room-info">
                     <h3 class="room-title">Belen</h3>
@@ -106,5 +111,7 @@
             </div>
         </div>
     </main>
+    <script src="student.js"></script>
 </body>
+
 </html>
