--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -11,6 +11,9 @@
 <body class="register-body">
     <main>
         <div class="register-container">
+            <div class="back-link">
+                <a href="index.html">← Volver al inicio</a>
+            </div>
             <h1 class="register-title">Register</h1>
             <form id="registerForm" class="register-form">
                 <input type="text" id="first_name" name="first_name" required placeholder="First name"
@@ -29,7 +32,10 @@
 
                 <button type="submit" class="register-button">Register</button>
             </form>
-            <p id="message" style="margin-top: 10px; font-weight: bold;"></p>
+            <p id="message" class="message"></p>
+            <p class="login-link">
+                ¿Ya tienes cuenta? <a href="login.html">Inicia sesión aquí</a>
+            </p>
         </div>
     </main>
 
