--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,8 +20,7 @@
                 
              </nav>
              <div class="user-actions">
-                 <button class="btn btn-secondary" onclick="window.location.href='login.html'">Iniciar Sesión</button>
-                 <button class="btn btn-primary" onclick="window.location.href='register.html'">Registrarse</button>
+                 <!-- Los botones se cargarán dinámicamente según el estado de autenticación -->
             </div>
         </div>
     </header>
@@ -139,6 +138,6 @@
         </div>
     </section>
 
-   
+    <script src="js/auth.js"></script>
 </body>
 </html>
