--- a/Frontend/pages/students-serch/student.html
+++ b/Frontend/pages/students-serch/student.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <h1>HospedaYa</h1>
+                <h1><a href="#" id="logoLink">HospedaYa</a></h1>
             </div>
             <nav class="nav">
                 <a href="#" class="nav-link active">Search Rooms</a>
