--- a/Frontend/pages/publish-property/index.html
+++ b/Frontend/pages/publish-property/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>HospedaYa</h2>
+                <h2><a href="../../index.html" style="text-decoration: none; color: inherit;">HospedaYa</a></h2>
             </div>
             <div class="nav-links">
                 <a href="#" class="nav-link">Mis Propiedades</a>
