--- a/Frontend/pages/student-booking/student_booking.html
+++ b/Frontend/pages/student-booking/student_booking.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bookings</title>
+    <title>Mis Reservas</title>
     <link rel="stylesheet" href="student_booking.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">hospedaYa</div>
+        <div class="logo">HospedaYa</div>
         <nav>
-            <a href="#">Search Rooms</a>
+            <a href="../students-serch/student.html">Search Rooms</a>
             <a href="#" class="active">My Bookings</a>
         </nav>
         <div class="icon">
@@ -20,86 +20,86 @@
     </header>
 
     <main class="container">
-        <h1>My Bookings</h1>
-        <p>Manage your room reservations</p>
+        <h1>Mis Reservas</h1>
+        <p>Gestiona tus reservas de habitaciones</p>
 
         <section class="stats">
             <div class="stat-card">
                 <i class="fas fa-calendar-alt"></i>
-                <span>Total Bookings</span>
+                <span>Total de Reservas</span>
                 <h2>8</h2>
             </div>
             <div class="stat-card yellow">
                 <i class="fas fa-clock"></i>
-                <span>Pending</span>
+                <span>Pendientes</span>
                 <h2>3</h2>
             </div>
             <div class="stat-card green">
                 <i class="fas fa-check-circle"></i>
-                <span>Confirmed</span>
+                <span>Confirmadas</span>
                 <h2>4</h2>
             </div>
             <div class="stat-card red">
                 <i class="fas fa-times-circle"></i>
-                <span>Cancelled</span>
+                <span>Canceladas</span>
                 <h2>1</h2>
             </div>
         </section>
 
         <section class="bookings">
             <div class="booking-card">
-                <img src="../images/student_booking/th.outside1888x823.66ff5f853b76a_infocdn__gal6ipz2hcmkjrdzevxcqoxwykogsy4s0ddyheyljpg.jpg" alt="Room">
+                <img src="../images/student_booking/th.outside1888x823.66ff5f853b76a_infocdn__gal6ipz2hcmkjrdzevxcqoxwykogsy4s0ddyheyljpg.jpg" alt="Habitación">
                 <div class="info">
-                    <h3>Cozy Studio Near Campus</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 University Ave, College Town</p>
-                    <p>Check-in: Jan 15, 2024 &nbsp; | &nbsp; Check-out: May 15, 2024</p>
-                    <strong>$850/month</strong>
+                    <h3>Estudio Acogedor Cerca del Campus</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Avenida Universidad, Ciudad Universitaria</p>
+                    <p>Entrada: 15 Ene 2024 &nbsp; | &nbsp; Salida: 15 May 2024</p>
+                    <strong>$850/mes</strong>
                 </div>
                 <div class="status">
-                    <span class="confirmed"><i class="fas fa-check"></i> Confirmed</span>
-                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancel</span>
+                    <span class="confirmed"><i class="fas fa-check"></i> Confirmada</span>
+                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancelar</span>
                 </div>
             </div>
 
             <div class="booking-card">
-                <img src="../images/student_booking/th.outside1888x823.6851b0b880fbe_infocdn__hzw58lrkssuj6ldjmuvo3dic8hm76uuy3ujevm6ojpg.jpg" alt="Room">
+                <img src="../images/student_booking/th.outside1888x823.6851b0b880fbe_infocdn__hzw58lrkssuj6ldjmuvo3dic8hm76uuy3ujevm6ojpg.jpg" alt="Habitación">
                 <div class="info">
-                    <h3>Shared Apartment Downtown</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 456 Main Street, Downtown District</p>
-                    <p>Check-in: Feb 1, 2024 &nbsp; | &nbsp; Check-out: Jun 1, 2024</p>
-                    <strong>$650/month</strong>
+                    <h3>Apartamento Compartido en el Centro</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 456 Calle Principal, Distrito Centro</p>
+                    <p>Entrada: 1 Feb 2024 &nbsp; | &nbsp; Salida: 1 Jun 2024</p>
+                    <strong>$650/mes</strong>
                 </div>
                 <div class="status">
-                    <span class="pending"><i class="fas fa-clock"></i> Pending</span>
-                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancel</span>
+                    <span class="pending"><i class="fas fa-clock"></i> Pendiente</span>
+                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancelar</span>
                 </div>
             </div>
 
             <div class="booking-card">
-                <img src="../images/student_booking/th.outside1888x823.6876f9ad08258_infocdn__uwmqfhlq5i5qcmvuhsvzd3shwercvusw0nczgwdojpg.jpg" alt="Room">
+                <img src="../images/student_booking/th.outside1888x823.6876f9ad08258_infocdn__uwmqfhlq5i5qcmvuhsvzd3shwercvusw0nczgwdojpg.jpg" alt="Habitación">
                 <div class="info">
-                    <h3>Private Room in House</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 789 Oak Street, Residential Area</p>
-                    <p>Check-in: Mar 1, 2024 &nbsp; | &nbsp; Check-out: Aug 1, 2024</p>
-                    <strong>$750/month</strong>
+                    <h3>Habitación Privada en Casa</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 789 Calle Roble, Zona Residencial</p>
+                    <p>Entrada: 1 Mar 2024 &nbsp; | &nbsp; Salida: 1 Ago 2024</p>
+                    <strong>$750/mes</strong>
                 </div>
                 <div class="status">
-                    <span class="pending"><i class="fas fa-clock"></i> Pending</span>
-                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancel</span>
+                    <span class="pending"><i class="fas fa-clock"></i> Pendiente</span>
+                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancelar</span>
                 </div>
             </div>
 
             <div class="booking-card">
-                <img src="../images/student_booking/th.outside1888x823.689f6679154bb_infocdn__nrwxtaka9uyb2hlkpzw6hlqnxkr62ewsgp984to0jpg.jpg" alt="Room">
+                <img src="../images/student_booking/th.outside1888x823.689f6679154bb_infocdn__nrwxtaka9uyb2hlkpzw6hlqnxkr62ewsgp984to0jpg.jpg" alt="Habitación">
                 <div class="info">
-                    <h3>Modern Studio Apartment</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 321 College Boulevard, University District</p>
-                    <p>Check-in: Jan 1, 2024 &nbsp; | &nbsp; Check-out: Dec 31, 2024</p>
-                    <strong>$950/month</strong>
+                    <h3>Apartamento Estudio Moderno</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 321 Bulevar Universitario, Distrito Universitario</p>
+                    <p>Entrada: 1 Ene 2024 &nbsp; | &nbsp; Salida: 31 Dic 2024</p>
+                    <strong>$950/mes</strong>
                 </div>
                 <div class="status">
-                    <span class="confirmed"><i class="fas fa-check"></i> Confirmed</span>
-                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancel</span>
+                    <span class="confirmed"><i class="fas fa-check"></i> Confirmada</span>
+                    <span class="cancel"><i class="fa-solid fa-xmark"></i> Cancelar</span>
                 </div>
             </div>
         </section>
