Implementation of functional buttons on landing pages

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,10 +14,7 @@
             <div class="logo">
                 <h1><a href="index.html" class="logo-link">HospedaYa</a></h1>
             </div>
-                         <nav class="nav">
-                 <a href="#" class="nav-link">Buscar Habitaciones</a>
-                 <a href="#" class="nav-link">Publicar Propiedad</a>
-                
+                         
              </nav>
              <div class="user-actions">
                  <!-- Los botones se cargarán dinámicamente según el estado de autenticación -->
@@ -50,7 +47,7 @@
                 </div>
                                  <h3>Encuentra Tu Habitación</h3>
                  <p>Explora cientos de habitaciones estudiantiles verificadas cerca de tu campus. Filtra por precio, comodidades y ubicación.</p>
-                 <button class="cta-btn cta-btn-white">Buscar Habitaciones</button>
+                 <button class="cta-btn cta-btn-white" id="searchRoomsBtn">Buscar Habitaciones</button>
             </div>
             <div class="cta-card cta-list">
                 <div class="cta-icon">
@@ -58,7 +55,7 @@
                 </div>
                                  <h3>Publica Tu Propiedad</h3>
                  <p>¿Tienes una habitación disponible? Gana ingresos extra alquilando a otros estudiantes. Configuración rápida y pagos seguros.</p>
-                 <button class="cta-btn cta-btn-white">Publicar Propiedad</button>
+                 <button class="cta-btn cta-btn-white" id="publishPropertyBtn">Publicar Propiedad</button>
             </div>
         </div>
     </section>
@@ -139,5 +136,6 @@
     </section>
 
     <script src="js/auth.js"></script>
+    <script src="js/landing.js"></script>
 </body>
 </html>
