--- a/Frontend/pages/student-booking/student_booking.html
+++ b/Frontend/pages/student-booking/student_booking.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">HospedaYa</div>
+        <div class="logo">
+            <a href="../../index.html" style="text-decoration: none; color: inherit;">HospedaYa</a>
+        </div>
         <nav>
             <a href="../students-serch/student.html">Search Rooms</a>
             <a href="#" class="active">My Bookings</a>
