Implement new visual alerts

--- a/Frontend/pages/publish-property/index.html
+++ b/Frontend/pages/publish-property/index.html
@@ -6,6 +6,7 @@
     <title>Publicar Propiedad - hospedaYa</title>
     <link rel="stylesheet" href="publish.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
         <!-- Navigation bar -->
@@ -15,7 +16,7 @@
                 <h2><a href="../../index.html" style="text-decoration: none; color: inherit;">HospedaYa</a></h2>
             </div>
             <div class="nav-links">
-                <a href="#" class="nav-link">Mis Propiedades</a>
+                <a href="../owner-dashboard/owner_dashboard.html" class="nav-link">Mis Propiedades</a>
                 <a href="#" class="nav-link active">Publicar Propiedad</a>
                
             </div>
