--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,7 @@
     <title>HospedaYa - Encuentra Tu Habitación Estudiantil Perfecta</title>
     <link rel="stylesheet" href="styles/dashboard.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <!-- Header -->
