--- a/Frontend/pages/owner-dashboard/owner_dashboard.html
+++ b/Frontend/pages/owner-dashboard/owner_dashboard.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Owner Dashboard</title>
+  <title>Panel de Propietario - HospedaYa</title>
   <link rel="stylesheet" href="owner_dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
   <header class="navbar">
-    <div class="logo">hospedaYa</div>
+    <div class="logo"><a href="../../index.html" style="text-decoration: none; color: inherit;">HospedaYa</a></div>
     <nav>
-      <a href="#">My properties</a>
-      <a href="#">Publish Property</a>
+      <a href="#">Mis Propiedades</a>
+      <a href="../publish-property/index.html">Publicar Propiedad</a>
     </nav>
     <div class="profile"><i class="fa-solid fa-user"></i>
       <span>John Smith</span>
@@ -22,161 +23,162 @@
   </header>
 
   <main class="dashboard">
-    <h1>Owner Dashboard</h1>
-    <p>Manage your property listings and rental requests</p>
+    <h1>Panel de Propietario</h1>
+    <p>Gestiona tus propiedades publicadas y solicitudes de alquiler</p>
 
     <section class="stats">
       <div class="stat-card">
         <i class="fas fa-building"></i>
         <div>
           <h3>8</h3>
-          <p>Active Listings</p>
+          <p>Propiedades Activas</p>
         </div>
       </div>
       <div class="stat-card">
         <i class="fas fa-hourglass-half"></i>
         <div>
           <h3>12</h3>
-          <p>Pending Requests</p>
+          <p>Solicitudes Pendientes</p>
         </div>
       </div>
       <div class="stat-card">
         <i class="fas fa-dollar-sign"></i>
         <div>
           <h3>$4,200</h3>
-          <p>Monthly Revenue</p>
+          <p>Ingresos Mensuales</p>
         </div>
       </div>
     </section>
 
     <div class="cards-container">
-      <!-- My Listings -->
+      <!-- Mis Propiedades -->
       <section class="card">
         <div class="card-header">
-          <h2>My Listings</h2>
-          <button class="btn-primary"><i class="fas fa-plus"></i> Add New Room</button>
+          <h2>Mis Propiedades</h2>
+          <button class="btn-primary"><i class="fas fa-plus"></i> Agregar Nueva Habitación</button>
         </div>
         <div class="listing">
           <div class="listing-item">
             <div>
-              <h3>Cozy Studio Near Campus</h3>
-              <p>Downtown Area</p>
-              <span class="price">$850/month</span>
+              <h3>Estudio Acogedor Cerca del Campus</h3>
+              <p>Zona Centro</p>
+              <span class="price">$850/mes</span>
             </div>
-            <span class="status available">Available</span>
+            <span class="status available">Disponible</span>
           </div>
           <div class="listing-item">
             <div>
-              <h3>Bright Single Room</h3>
-              <p>University District</p>
-              <span class="price">$720/month</span>
+              <h3>Habitación Individual Luminosa</h3>
+              <p>Distrito Universitario</p>
+              <span class="price">$720/mes</span>
             </div>
-            <span class="status occupied">Occupied</span>
+            <span class="status occupied">Ocupada</span>
           </div>
           <div class="listing-item">
             <div>
-              <h3>Shared Apartment</h3>
-              <p>Campus West</p>
-              <span class="price">$620/month</span>
+              <h3>Apartamento Compartido</h3>
+              <p>Campus Oeste</p>
+              <span class="price">$620/mes</span>
             </div>
-            <span class="status available">Available</span>
+            <span class="status available">Disponible</span>
           </div>
         </div>
       </section>
 
-      <!-- Received Requests -->
+      <!-- Solicitudes Recibidas -->
       <section class="card">
-        <h2>Received Requests</h2>
+        <h2>Solicitudes Recibidas</h2>
         <div class="request">
           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="">
           <div>
-            <p><strong>Emma Wilson</strong><br>Interested in Cozy Studio Near Campus</p>
-            <span>2 hours ago</span>
+            <p><strong>Emma Wilson</strong><br>Interesada en Estudio Acogedor Cerca del Campus</p>
+            <span>hace 2 horas</span>
           </div>
           <div class="actions">
-            <button class="btn-accept">Accept</button>
-            <button class="btn-decline">Decline</button>
+            <button class="btn-accept">Aceptar</button>
+            <button class="btn-decline">Rechazar</button>
           </div>
         </div>
         <div class="request">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="">
           <div>
-            <p><strong>Alex Chen</strong><br>Wants to view Bright Single Room</p>
-            <span>5 hours ago</span>
+            <p><strong>Alex Chen</strong><br>Quiere ver Habitación Individual Luminosa</p>
+            <span>hace 5 horas</span>
           </div>
           <div class="actions">
-            <button class="btn-accept">Accept</button>
-            <button class="btn-decline">Decline</button>
+            <button class="btn-accept">Aceptar</button>
+            <button class="btn-decline">Rechazar</button>
           </div>
         </div>
         <div class="request">
           <img src="https://randomuser.me/api/portraits/women/55.jpg" alt="">
           <div>
-            <p><strong>Sarah Johnson</strong><br>Inquiry about Shared Apartment</p>
-            <span>1 day ago</span>
+            <p><strong>Sarah Johnson</strong><br>Consulta sobre Apartamento Compartido</p>
+            <span>hace 1 día</span>
           </div>
           <div class="actions">
-            <button class="btn-accept">Accept</button>
-            <button class="btn-decline">Decline</button>
+            <button class="btn-accept">Aceptar</button>
+            <button class="btn-decline">Rechazar</button>
           </div>
         </div>
       </section>
     </div>
 
-    <!-- All Property Listings -->
+    <!-- Todas las Propiedades Publicadas -->
     <section class="all-listings">
       <div class="header">
-        <h2>All Property Listings</h2>
+        <h2>Todas las Propiedades Publicadas</h2>
       </div>
 
       <div class="properties">
         <div class="property-card">
           <img src="../images/student_booking/th.outside1888x823.6876f9ad08258_infocdn__uwmqfhlq5i5qcmvuhsvzd3shwercvusw0nczgwdojpg.jpg" alt="">
           <div class="info">
-            <h3>Cozy Studio Near Campus</h3>
-            <p>Downtown Area • 1 bed, 1 bath</p>
-            <span class="price">$850/month</span>
-            <span class="status available">Available</span>
-            <p class="posted">Posted 3 days ago</p>
+            <h3>Estudio Acogedor Cerca del Campus</h3>
+            <p>Zona Centro • 1 habitación, 1 baño</p>
+            <span class="price">$850/mes</span>
+            <span class="status available">Disponible</span>
+            <p class="posted">Publicado hace 3 días</p>
           </div>
           <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Edit</button>
-            <button class="delete"><i class="fas fa-trash"></i> Delete</button>
+            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
+            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
           </div>
         </div>
 
         <div class="property-card">
           <img src="../images/student_booking/th.outside1888x823.6851b0b880fbe_infocdn__hzw58lrkssuj6ldjmuvo3dic8hm76uuy3ujevm6ojpg.jpg" alt="">
           <div class="info">
-            <h3>Bright Single Room</h3>
-            <p>University District • 1 bed, shared bath</p>
-            <span class="price">$720/month</span>
-            <span class="status occupied">Occupied</span>
-            <p class="posted">Posted 1 week ago</p>
+            <h3>Habitación Individual Luminosa</h3>
+            <p>Distrito Universitario • 1 habitación, baño compartido</p>
+            <span class="price">$720/mes</span>
+            <span class="status occupied">Ocupada</span>
+            <p class="posted">Publicado hace 1 semana</p>
           </div>
           <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Edit</button>
-            <button class="delete"><i class="fas fa-trash"></i> Delete</button>
+            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
+            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
           </div>
         </div>
 
         <div class="property-card">
           <img src="../images/student_booking/th.outside1888x823.689f6679154bb_infocdn__nrwxtaka9uyb2hlkpzw6hlqnxkr62ewsgp984to0jpg.jpg" alt="">
           <div class="info">
-            <h3>Shared Apartment</h3>
-            <p>Campus West • 1 bed, shared facilities</p>
-            <span class="price">$620/month</span>
-            <span class="status available">Available</span>
-            <p class="posted">Posted 2 days ago</p>
+            <h3>Apartamento Compartido</h3>
+            <p>Campus Oeste • 1 habitación, instalaciones compartidas</p>
+            <span class="price">$620/mes</span>
+            <span class="status available">Disponible</span>
+            <p class="posted">Publicado hace 2 días</p>
           </div>
           <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Edit</button>
-            <button class="delete"><i class="fas fa-trash"></i> Delete</button>
+            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
+            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
           </div>
         </div>
       </div>
     </section>
   </main>
 
+  <script src="owner_dashboard.js"></script>
 </body>
 </html>
