--- a/Frontend/pages/owner-dashboard/owner_dashboard.html
+++ b/Frontend/pages/owner-dashboard/owner_dashboard.html
@@ -179,6 +179,7 @@
     </section>
   </main>
 
+  <script src="../../js/config.js"></script>
   <script src="owner_dashboard.js"></script>
 </body>
 </html>
