--- a/Frontend/pages/publish-property/index.html
+++ b/Frontend/pages/publish-property/index.html
@@ -126,6 +126,7 @@
         </div>
     </main>
 
+    <script src="../../js/config.js"></script>
     <script src="publish.js"></script>
 </body>
 </html>
