--- a/Frontend/pages/students-serch/student.html
+++ b/Frontend/pages/students-serch/student.html
@@ -44,6 +44,7 @@
         <div class="room-grid">
         </div>
     </main>
+    <script src="../../js/config.js"></script>
     <script src="student.js"></script>
 </body>
 
