--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -41,6 +41,7 @@
     </main>
 
     <!-- script externo -->
+    <script src="./js/config.js"></script>
     <script src="./js/register.js"></script>
 </body>
 
