--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -136,6 +136,7 @@
         </div>
     </section>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/landing.js"></script>
 </body>
