--- a/Frontend/pages/owner-dashboard/owner_dashboard.html
+++ b/Frontend/pages/owner-dashboard/owner_dashboard.html
@@ -11,14 +11,15 @@
 <body>
 
   <header class="navbar">
-    <div class="logo"><a href="../../index.html" style="text-decoration: none; color: inherit;">HospedaYa</a></div>
+    <div class="logo"><a href="../../index.html">HospedaYa</a></div>
     <nav>
       <a href="#">Mis Propiedades</a>
       <a href="../publish-property/index.html">Publicar Propiedad</a>
     </nav>
-    <div class="profile"><i class="fa-solid fa-user"></i>
-      <span>John Smith</span>
-      <i class="fas fa-sign-out-alt"></i>
+    <div class="profile">
+      <i class="fa-solid fa-user"></i>
+      <span id="ownerName">Propietario</span>
+      <i class="fas fa-sign-out-alt" id="logoutBtn"></i>
     </div>
   </header>
 
@@ -30,155 +31,50 @@
       <div class="stat-card">
         <i class="fas fa-building"></i>
         <div>
-          <h3>8</h3>
+          <h3 id="propiedadesActivas">0</h3>
           <p>Propiedades Activas</p>
         </div>
       </div>
       <div class="stat-card">
         <i class="fas fa-hourglass-half"></i>
         <div>
-          <h3>12</h3>
+          <h3 id="solicitudesPendientes">0</h3>
           <p>Solicitudes Pendientes</p>
         </div>
       </div>
       <div class="stat-card">
         <i class="fas fa-dollar-sign"></i>
         <div>
-          <h3>$4,200</h3>
+          <h3 id="ingresosMensuales">$0</h3>
           <p>Ingresos Mensuales</p>
         </div>
       </div>
     </section>
 
     <div class="cards-container">
-      <!-- Mis Propiedades -->
       <section class="card">
         <div class="card-header">
           <h2>Mis Propiedades</h2>
-          <button class="btn-primary"><i class="fas fa-plus"></i> Agregar Nueva Habitación</button>
+          <button class="btn-primary" id="btnAddProperty"><i class="fas fa-plus"></i> Agregar Nueva Habitación</button>
         </div>
-        <div class="listing">
-          <div class="listing-item">
-            <div>
-              <h3>Estudio Acogedor Cerca del Campus</h3>
-              <p>Zona Centro</p>
-              <span class="price">$850/mes</span>
-            </div>
-            <span class="status available">Disponible</span>
-          </div>
-          <div class="listing-item">
-            <div>
-              <h3>Habitación Individual Luminosa</h3>
-              <p>Distrito Universitario</p>
-              <span class="price">$720/mes</span>
-            </div>
-            <span class="status occupied">Ocupada</span>
-          </div>
-          <div class="listing-item">
-            <div>
-              <h3>Apartamento Compartido</h3>
-              <p>Campus Oeste</p>
-              <span class="price">$620/mes</span>
-            </div>
-            <span class="status available">Disponible</span>
-          </div>
-        </div>
+        <div class="listing" id="misPropiedades"></div>
       </section>
 
-      <!-- Solicitudes Recibidas -->
       <section class="card">
         <h2>Solicitudes Recibidas</h2>
-        <div class="request">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="">
-          <div>
-            <p><strong>Emma Wilson</strong><br>Interesada en Estudio Acogedor Cerca del Campus</p>
-            <span>hace 2 horas</span>
-          </div>
-          <div class="actions">
-            <button class="btn-accept">Aceptar</button>
-            <button class="btn-decline">Rechazar</button>
-          </div>
-        </div>
-        <div class="request">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="">
-          <div>
-            <p><strong>Alex Chen</strong><br>Quiere ver Habitación Individual Luminosa</p>
-            <span>hace 5 horas</span>
-          </div>
-          <div class="actions">
-            <button class="btn-accept">Aceptar</button>
-            <button class="btn-decline">Rechazar</button>
-          </div>
-        </div>
-        <div class="request">
-          <img src="https://randomuser.me/api/portraits/women/55.jpg" alt="">
-          <div>
-            <p><strong>Sarah Johnson</strong><br>Consulta sobre Apartamento Compartido</p>
-            <span>hace 1 día</span>
-          </div>
-          <div class="actions">
-            <button class="btn-accept">Aceptar</button>
-            <button class="btn-decline">Rechazar</button>
-          </div>
-        </div>
+        <div id="solicitudesRecibidas"></div>
       </section>
     </div>
 
-    <!-- Todas las Propiedades Publicadas -->
     <section class="all-listings">
       <div class="header">
         <h2>Todas las Propiedades Publicadas</h2>
       </div>
-
-      <div class="properties">
-        <div class="property-card">
-          <img src="../images/student_booking/th.outside1888x823.6876f9ad08258_infocdn__uwmqfhlq5i5qcmvuhsvzd3shwercvusw0nczgwdojpg.jpg" alt="">
-          <div class="info">
-            <h3>Estudio Acogedor Cerca del Campus</h3>
-            <p>Zona Centro • 1 habitación, 1 baño</p>
-            <span class="price">$850/mes</span>
-            <span class="status available">Disponible</span>
-            <p class="posted">Publicado hace 3 días</p>
-          </div>
-          <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
-            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
-          </div>
-        </div>
-
-        <div class="property-card">
-          <img src="../images/student_booking/th.outside1888x823.6851b0b880fbe_infocdn__hzw58lrkssuj6ldjmuvo3dic8hm76uuy3ujevm6ojpg.jpg" alt="">
-          <div class="info">
-            <h3>Habitación Individual Luminosa</h3>
-            <p>Distrito Universitario • 1 habitación, baño compartido</p>
-            <span class="price">$720/mes</span>
-            <span class="status occupied">Ocupada</span>
-            <p class="posted">Publicado hace 1 semana</p>
-          </div>
-          <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
-            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
-          </div>
-        </div>
-
-        <div class="property-card">
-          <img src="../images/student_booking/th.outside1888x823.689f6679154bb_infocdn__nrwxtaka9uyb2hlkpzw6hlqnxkr62ewsgp984to0jpg.jpg" alt="">
-          <div class="info">
-            <h3>Apartamento Compartido</h3>
-            <p>Campus Oeste • 1 habitación, instalaciones compartidas</p>
-            <span class="price">$620/mes</span>
-            <span class="status available">Disponible</span>
-            <p class="posted">Publicado hace 2 días</p>
-          </div>
-          <div class="buttons">
-            <button class="edit"><i class="fas fa-edit"></i> Editar</button>
-            <button class="delete"><i class="fas fa-trash"></i> Eliminar</button>
-          </div>
-        </div>
-      </div>
+      <div class="properties" id="todasPropiedades"></div>
     </section>
   </main>
 
   <script src="owner_dashboard.js"></script>
 </body>
 </html>
+
